deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: actions-runner-system
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver
