deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: actions-runner-system
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 52.19.237.122/32,195.202.50.85/32,54.194.100.49
spec:
  ingressClassName: nginx
  rules:
  - host: echo-server.test.reactivebetting.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
